--- a/ML-Project.ipynb
+++ b/ML-Project.ipynb
@@ -234,7 +234,9 @@
         {
             "cell_type": "code",
             "execution_count": 8,
-            "metadata": {},
+            "metadata": {
+                "collapsed": true
+            },
             "outputs": [
                 {
                     "name": "stdout",
